<?xml version="1.0"?>
<package>
  <name>wali2_hardware_interface</name>
  <version>0.0.0</version>
  <description>The wali2_hardware_interface package</description>

  <maintainer email="johnchen@todo.todo">johnchen</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>geometry_msgs</build_depend>
    <build_depend>wali2_robot_serialcon</build_depend>
  <run_depend>geometry_msgs</run_depend>
    <run_depend>wali2_robot_serialcon</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<cpp cflags="-I${prefix}/include"/>
  </export>
</package>
