<?xml version="1.0"?>
<package>
  <name>wali2_mechanism_msgs</name>
  <version>0.0.0</version>
  <description>The wali2_mechanism_msgs package</description>

  <maintainer email="johnchen@todo.todo">johnchen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
